# onmcu-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  build.rs  config.example.toml  deny.toml  dist-workspace.toml
.github/: build-setup.yml  dependabot.yml
.github/workflows/: ci.yml  dependency-advisories.yml  openapi-sync.yml  publish-crates.yml  release.yml
openapi/: openapi.json
src/: cli.rs  error.rs  keyring.rs  lib.rs  main.rs
src/api/: error.rs  generated.rs  interface.rs  mod.rs  types.rs
src/commands/: list_boards.rs  login.rs  mod.rs  run.rs
src/upload/: config.rs  mod.rs  types.rs  uploader.rs
tests/: keyring_cli.rs  run_smoke.rs  trailing_args.rs
